--- a/app/src/main/res/layout/fragment_drink.xml
+++ b/app/src/main/res/layout/fragment_drink.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.drink.DrinkFragment">
+    tools:context=".ui.drink.DrinkFragment"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/text_drink"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tab_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Drink Fragment"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:textSize="20sp"/>
+        android:layout_height="wrap_content"
+        app:tabIndicatorAnimationDuration="300">
 
-</FrameLayout>
+    </com.google.android.material.tabs.TabLayout>
+
+    <androidx.viewpager.widget.ViewPager
+        android:id='@+id/viewPager'
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</LinearLayout>
